# oinzen

./: .gitignore  CMakeLists.txt  README  STM32F746NGHx_FLASH.ld  oinzen Build (GNU).launch  oinzen.ioc
Core/Inc/: stm32f7xx_hal_conf.h
Core/Src/: main.c
Core/Src/hw/: stm32f7xx_it.c
Drivers/: CMakeLists.txt
Drivers/CMSIS/Device/ST/STM32F7xx/Include/: stm32f7xx.h
SW4STM32/temp/: .cproject  .project
boot/: startup_stm32f746xx.s
cmake/: toolchain.cmake
core/include/app/: counter.h  lwip.h  main.h
core/include/conf/: FreeRTOSConfig.h  lwipopts.h  stm32f7xx_hal_conf.h
core/include/hw/: ethernetif.h  interrupts.h
core/include/util/: diag.h
core/src/app/: counter.c  counter.h  freertos.c  index.h  lwip.c  main.c  ntp_client.c  ntp_client.h  tiny-httpd.c  tiny-httpd.h
core/src/hw/: ethernetif.c  hal_msp.c  hal_timer.c  init.c  interrupts.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c
core/src/system/: syscalls.c
core/src/util/: diag.c
lib/CMSIS/: CMakeLists.txt
lib/FreeRTOS/: CMakeLists.txt
lib/HAL/: CMakeLists.txt
lib/LwIP/: CMakeLists.txt
lib/LwIP/src/api/: tcpip.c
lib/LwIP/src/core/: tcp.c  udp.c
lib/STM32F7xx_HAL_Driver/: CMakeLists.txt
lib/hal/: CMakeLists.txt
lib/printf/: CMakeLists.txt  printf.c
